@@ -1,3 +1,4 @@
 DIST default_value_for-2.0.3.gem 15360 SHA256 9217290832b543a9a84d9ce9c706ad73ab97445a3fd5b61090f23ce721f7dd98 SHA512 5b2398cfb0a8b9f35cbae12c3e53756b0aa147adfeeb25c117efbf39456b20aa952b0b5963bfa8428fdcc900f73d5a164244b5604273a283f6ca25330ba7ba46 WHIRLPOOL 18c685a674e4a0c78908cab28a7f1df2d06fdd9f53989cbbda733848782138cc376a4d0bb1836664251f351d3e9e5ee9b3b18740abc34c11950d571b2c7f0e7e
 DIST default_value_for-3.0.0.1.gem 18432 SHA256 ea22e917b61123c52542db6806ccb71933ac1ed3f4682d012bcd3ae8ce0f13cd SHA512 43066f7aac3db3fb183c6bce7255d5e453b3b8af616a8847ce560814bd0bcb7820c9148524953d7351b6fc33947a6ad02b3cee9766a1c7374ae0964af01d2b89 WHIRLPOOL 6d1f4f5c7689b83aa831e0e5c6e1081d70f92d729c98048fdbe5d9187ffae27524ea148a694309b8a4fec508f00376a7aa5127185d42a2b62f6fc69c06974f48
 DIST default_value_for-3.0.0.gem 16896 SHA256 1fbd89cb5e7dab1820f7da6bbf5972c36e41acaa25101f129a7adffe9b987021 SHA512 38a179e067e82ed86d4a6e52071fdb987783af05aad816810c5322ace23b8188055ecc96208f9cab9aa72ba5a3feea81e5024b909b345003ea972c79013ad7fb WHIRLPOOL 64f30566835d1b03ce4dd561b0047dd3c32bb8efeb7bbe7b76abe9d927cfa2ac98ad4c5675dcd3bf202672357e2581abcb32656712789bd9f03e3abf165523b4
+DIST default_value_for-3.0.1.gem 14848 SHA256 a0765313837ea4bf9d9e37bf2898c9762ccd170e6220de33f083054fd4ca94fc SHA512 8f9f87ca7173ee2572203171d3a792689d9a603270ac6cc569a3ada28735a2308b1e6bb4b17d4f85750468f869df136c79c19c08343e44c11fb8deaa1aa592c2 WHIRLPOOL 6002b2d56277ece3bc3fd012463e492d02dbab1bb019ad7e7c956cf9f63827f2cfb6653e672687647298d50265d13c5d70d8a0f9263629951a50e5cb318f591a
