@@ -1,0 +1,29 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header:  $
+
+EAPI=5
+USE_RUBY="ruby19 ruby20 ruby21"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="README.md"
+
+RUBY_FAKEGEM_EXTRAINSTALL="init.rb"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Allows one to define default values for ActiveRecord models in a declarative manner."
+HOMEPAGE="https://github.com/FooBarWidget/default_value_for"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64"
+IUSE=""
+
+ruby_add_rdepend ">=dev-ruby/activerecord-3.2.0 <dev-ruby/activerecord-5"
+
+ruby_add_bdepend "test? ( dev-ruby/minitest )"
+
+each_ruby_test() {
+	${RUBY} -Ilib test.rb || die
+}
