@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/default_value_for
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*default_value_for-3.0.1 (28 Jan 2015)
+
+  28 Jan 2015; Hans de Graaff <graaff@gentoo.org>
+  +default_value_for-3.0.1.ebuild:
+  Version bump.
 
 *default_value_for-3.0.0.1 (06 Jun 2014)
 
